# Detali_Bot

./: .gitignore  Dockerfile  Makefile  main.py  pyproject.toml  requirements.txt
bot/: README.md  Untitled  __init__.py  callback_data.py  env.yookassa.example  main.py  utils.py
bot/api/: __init__.py  yookassa_webhook.py
bot/core/: __init__.py  legal_config.py  logging.py  opencart_client.py  opencart_config.py  runtime_info.py  yookassa_config.py
bot/database/: __init__.py  db.py  models.py
bot/handlers/: __init__.py  account.py  admin.py  cart.py  catalog.py  contact_fallback.py  order.py  payment.py  start.py
bot/infrastructure/: __init__.py  opencart_db.py
bot/keyboards/: __init__.py  kb.py
bot/middlewares/: __init__.py  user.py
bot/services/: __init__.py  bot_status.py  catalog_sync.py  opencart_order.py  yookassa_payment.py
bot/utils/: admin_ui.py
deploy/: detali-bot.service
docs/: DEPLOY.md  LEGAL_COMPLIANCE.md  ИНСТРУКЦИЯ_КНОПКИ_БОТА.md
logs/: .gitkeep
scripts/: clear_test_orders.py
